--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -60,7 +60,7 @@ bind = $mainMod, E, exec, $editor
 bind = $mainMod, I, exec, $TERMINAL -e htop
 bind = $mainMod, Escape, exec, systemctl suspend
 bind = $extraMod, Escape, exec, systemctl reboot
-bind = SUPER, Z, exec, swaylock -f -c 000000 -i $HOME/.local/share/lock.png
+bind = $extraMod, Z, exec, swaylock -f -c 000000 -i $HOME/.local/share/lock.png
 bind = ,code:248, exec, swaylock -f -c 000000 -i $HOME/.local/share/lock.png
 bind = $mainMod, PRINT, exec, grim
 
@@ -197,6 +197,11 @@ bind = L_ALT, h, resizeactive, -40 0
 bind = L_ALT, l, resizeactive, 40 0
 bind = L_ALT, k, resizeactive, 0 -40
 bind = L_ALT, j, resizeactive, 0 40
+
+# Scroll through existing workspaces with keyboard
+bind = $mainMod, TAB, workspace, e+1
+bind = L_ALT, TAB, workspace, e-1
+
 
 
 # Move focus with mainMod
