remove color specification from swaylock

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -60,8 +60,8 @@ bind = $mainMod, E, exec, $editor
 bind = $mainMod, I, exec, $TERMINAL -e htop
 bind = $mainMod, Escape, exec, systemctl suspend
 bind = $extraMod, Escape, exec, systemctl reboot
-bind = $extraMod, Z, exec, swaylock -f -c 000000 -i $HOME/.local/share/lock.png
-bind = ,code:248, exec, swaylock -f -c 000000 -i $HOME/.local/share/lock.png
+bind = $extraMod, Z, exec, swaylock -f -i $HOME/.local/share/lock.png
+bind = ,code:248, exec, swaylock -f -i $HOME/.local/share/lock.png
 bind = $mainMod, PRINT, exec, grim
 
 #mpd-mpc remote control
