--- a/.config/i3/config
+++ b/.config/i3/config
@@ -154,8 +154,8 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # switch between the current and the previously focused one
-bindsym $mod+tab workspace back_and_forth
-bindsym $mod+Shift+tab move container to workspace back_and_forth
+bindcode $mod+23 workspace back_and_forth
+bindcode $mod+Shift+23 move container to workspace back_and_forth
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
