Broken suspend FIXED!

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,7 +1,6 @@
 #set default monitor
 #use 'hyprctl monitors' 
-monitor=eDP-1,1920x1080@60,0x0,1
-
+monitor=,preferred,auto,1
 
 #using intel gpu for rendering
 #run lspci | grep -E 'VGA|3D' , then
@@ -22,7 +21,7 @@ env = XCURSOR_SIZE,24
 env = GTK_THEME, Materia-dark-compact
 
 #autostart
-exec-once = waybar
+exec-once = waybar &
 exec-once = sway-launcher-desktop autostart 
 exec-once = udiskie &
 exec-once = dunst &
@@ -198,8 +197,8 @@ bind = L_ALT, k, resizeactive, 0 -40
 bind = L_ALT, j, resizeactive, 0 40
 
 # Scroll through existing workspaces with keyboard
-bind = $mainMod, TAB, workspace, e+1
-bind = L_ALT, TAB, workspace, e-1
+#bind = $mainMod, TAB, workspace, e+1
+#bind = L_ALT, TAB, workspace, e-1
 
 
 
