uncomment workspace scrolling

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -197,8 +197,8 @@ bind = L_ALT, k, resizeactive, 0 -40
 bind = L_ALT, j, resizeactive, 0 40
 
 # Scroll through existing workspaces with keyboard
-#bind = $mainMod, TAB, workspace, e+1
-#bind = L_ALT, TAB, workspace, e-1
+bind = $mainMod, TAB, workspace, e+1
+bind = L_ALT, TAB, workspace, e-1
 
 
 
