--- a/.config/swayimg/config
+++ b/.config/swayimg/config
@@ -91,7 +91,9 @@ brief.bottomright = status
 [keys]
 F1 = help
 Home = first_file
+g = first_file
 End = last_file
+Shift+g = last_file
 Prior = prev_file
 h = prev_file
 Left = prev_file
@@ -107,9 +109,13 @@ Shift+s = slideshow
 s = animation
 f = fullscreen
 Shift+Left = step_left 10
+Shift+h = step_left 10
 Shift+Right = step_right 10
+Shift+l = step_right 10
 Shift+Up = step_up 10
+Shift+k = step_up 10
 Shift+Down = step_down 10
+Shift+j = step_down 10
 Equal = zoom +10
 Plus = zoom +10
 k = zoom +10
