--- a/.config/transmission-daemon/settings.json
+++ b/.config/transmission-daemon/settings.json
@@ -13,16 +13,16 @@
     "bind-address-ipv6": "::",
     "blocklist-enabled": false,
     "blocklist-url": "http://www.example.com/blocklist",
-    "cache-size-mb": 4,
+    "cache-size-mb": 0,
     "default-trackers": "",
     "dht-enabled": true,
-    "download-dir": "/home/arch-mage/web",
+    "download-dir": "/home/arch-mage/Downloads",
     "download-queue-enabled": true,
     "download-queue-size": 3,
     "encryption": 1,
     "idle-seeding-limit": 30,
     "idle-seeding-limit-enabled": false,
-    "incomplete-dir": "/home/arch-mage/web",
+    "incomplete-dir": "/home/arch-mage/Downloads",
     "incomplete-dir-enabled": false,
     "lpd-enabled": true,
     "message-level": 4,
@@ -76,6 +76,6 @@
     "umask": "022",
     "upload-slots-per-torrent": 8,
     "utp-enabled": true,
-    "watch-dir": "/home/arch-mage/web",
+    "watch-dir": "/home/arch-mage/Downloads",
     "watch-dir-enabled": true
 }
