add window rule to prevent swayidle if there is a fullscreen window focused

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -179,6 +179,7 @@ device {
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrule=float, title:(sway-launcher-desktop)$
 windowrule=size 500 500, title:(sway-launcher-desktop)$
+windowrulev2=idleinhibit fullscreen, fullscreen:1
 
 #move focused windows inside a workspace
 bind = $extraMod, H, movewindow, l
