update hyprland config

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -28,19 +28,21 @@ exec-once = transmission-daemon
 exec-once = swaybg -i $HOME/.local/share/backgrounds/7.png
 exec-once = $HOME/.local/bin/sleep.sh
 
-# Set programs 
-# other programs are in /etc/environment
-$fileManager = $TERMINAL -e $HOME/.local/bin/nwrap
-$menu = $TERMINAL -e sway-launcher-desktop
-$clock = $TERMINAL -e tty-clock -C3 -c -s -n -f "%A %d %B %Y (%Z)"
-$editor = $TERMINAL -e $EDITOR
+#applications
+$term = kitty
+$fileManager = $term -e $HOME/.local/bin/nwrap
+$menu = $term -e sway-launcher-desktop
+$clock = $term -e tty-clock -C3 -c -s -n -f "%A %d %B %Y (%Z)"
+$editor = $term -e nvim
+$sysmonitor = $term -e htop
+$browser = qutebrowser
 
 #keys
 $mainMod = SUPER
 $extraMod = SUPER_SHIFT
 
 # keyboard shortcuts
-bind = $mainMod, Return, exec, $TERMINAL
+bind = $mainMod, Return, exec, $term
 bind = $mainMod, F, fullscreen, 1
 bind = $mainMod, Q, killactive,
 bind = $extraMod, Q, exec, $HOME/.local/bin/killhypr
@@ -49,10 +51,10 @@ bind = $mainMod, SPACE, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, X, togglesplit, # dwindle
-bind = $mainMod, W, exec, $BROWSER
+bind = $mainMod, W, exec, $browser
 bind = $mainMod, T, exec, $clock
 bind = $mainMod, E, exec, $editor
-bind = $mainMod, I, exec, $TERMINAL -e htop
+bind = $mainMod, I, exec, $sysmonitor
 bind = $mainMod, Escape, exec, systemctl suspend
 bind = $extraMod, Z, exec, swaylock -f -i $HOME/.local/share/lock.png
 bind = ,code:248, exec, swaylock -f -i $HOME/.local/share/lock.png
