replace swaylock entries with variable

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -36,6 +36,8 @@ $clock = $term -e tty-clock -C3 -c -s -n -f "%A %d %B %Y (%Z)"
 $editor = $term -e nvim
 $sysmonitor = $term -e htop
 $browser = qutebrowser
+$lock = swaylock -f -i $HOME/.local/share/lock.png
+
 
 #keys
 $mainMod = SUPER
@@ -56,8 +58,8 @@ bind = $mainMod, T, exec, $clock
 bind = $mainMod, E, exec, $editor
 bind = $mainMod, I, exec, $sysmonitor
 bind = $mainMod, Escape, exec, systemctl suspend
-bind = $extraMod, Z, exec, swaylock -f -i $HOME/.local/share/lock.png
-bind = ,code:248, exec, swaylock -f -i $HOME/.local/share/lock.png
+bind = $extraMod, Z, exec, $lock 
+bind = ,code:248, exec, $lock
 bind = $mainMod, PRINT, exec, grim
 
 #mpd-mpc remote control
