Add QT vars and replace swaybg with swww

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -14,10 +14,11 @@ env = WLR_DRM_DEVICES,/dev/dri/card2:/dev/dri/card1
 #env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 #env = WLR_NO_HARDWARE_CURSORS,1
 
-#extra variables
-#other variables are in /etc/environment
+#variables
 env = XDG_SESSION_DESKTOP,Hyprland
 env = XCURSOR_SIZE,24
+env = QT_QPA_PLATFORM,wayland
+env = QT_QPA_PLATFORMTHEME,qt6ct
 
 #autostart
 exec-once = waybar &
@@ -25,7 +26,7 @@ exec-once = sway-launcher-desktop autostart
 exec-once = udiskie &
 exec-once = dunst &
 exec-once = transmission-daemon
-exec-once = swaybg -i $HOME/.local/share/backgrounds/7.png
+exec-once = swww init || swww img $HOME/.local/share/backgrounds/7.png
 exec-once = $HOME/.local/bin/sleep.sh
 
 #applications
