--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -9,13 +9,13 @@ env = WLR_DRM_DEVICES,/dev/dri/card2:/dev/dri/card1
 
 #nvidia
 #env = LIBVA_DRIVER_NAME,nvidia
-#env = XDG_SESSION_TYPE,wayland
 #env = GBM_BACKEND,nvidia-drm
 #env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 #env = WLR_NO_HARDWARE_CURSORS,1
 
 #variables
 env = XDG_SESSION_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,qt6ct
