reorganize hypr config

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -38,7 +38,7 @@ $editor = $term -e nvim
 $sysmonitor = $term -e htop
 $browser = qutebrowser
 $lock = swaylock -f -i $HOME/.local/share/lock.png
-
+$screenshot = grim
 
 #keys
 $mainMod = SUPER
@@ -61,7 +61,7 @@ bind = $mainMod, I, exec, $sysmonitor
 bind = $mainMod, Escape, exec, systemctl suspend
 bind = $extraMod, Z, exec, $lock 
 bind = ,code:248, exec, $lock
-bind = $mainMod, PRINT, exec, grim
+bind = $mainMod, PRINT, exec, $screenshot
 
 #mpd-mpc remote control
 bind = ,XF86AudioNext, exec, mpc next
@@ -72,17 +72,14 @@ bind = ,XF86AudioPlay, exec, mpc toggle
 bind = $mainMod, code:69, exec, brightnessctl set +10%
 bind = $mainMod, code:68, exec, brightnessctl set 10%-
 
-# Use pactl to adjust volume in PulseAudio.
+#pactl
 bind = ,XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5% 
 bind = ,XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5% 
 bind = ,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle 
 bind = ,XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle 
 
 
-
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables
-
-
+#etc
 input {
     kb_layout = us,ru
     kb_variant =
@@ -201,8 +198,6 @@ bind = L_ALT, j, resizeactive, 0 40
 # Scroll through existing workspaces with keyboard
 bind = $mainMod, TAB, workspace, e+1
 bind = L_ALT, TAB, workspace, e-1
-
-
 
 # Move focus with mainMod
 bind = $mainMod, H, movefocus, l
