add packager name

--- a/user_config/.config/pacman/makepkg.conf
+++ b/user_config/.config/pacman/makepkg.conf
@@ -128,7 +128,7 @@ SRCPKGDEST=$HOME/.cache/pacman/pkgsrc/
 #-- Log files: specify a fixed directory where all log files will be placed
 LOGDEST=$HOME/.cache/pacman/log/
 #-- Packager: name/email of the person or organization building packages
-#PACKAGER="John Doe <john@doe.com>"
+PACKAGER="$USER <local@arch.com>"
 #-- Specify a key to use for package signing
 #GPGKEY=""
 
