set clipboard access

--- a/user_config/.config/qutebrowser/autoconfig.yml
+++ b/user_config/.config/qutebrowser/autoconfig.yml
@@ -38,6 +38,7 @@ settings:
   content.javascript.clipboard:
     aur.archlinux.org: access
     github.com: access
+    global: access
   content.javascript.enabled:
     global: true
   content.notifications.enabled:
