replace dunst with mako

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -24,7 +24,7 @@ env = QT_QPA_PLATFORMTHEME,qt6ct
 exec-once = waybar &
 exec-once = sway-launcher-desktop autostart 
 exec-once = udiskie &
-exec-once = dunst &
+exec-once = mako &
 exec-once = transmission-daemon
 exec-once = swww init || swww img $HOME/.local/share/backgrounds/7.png
 exec-once = $HOME/.local/bin/sleep.sh
