add icon to language module

--- a/user_config/.config/waybar/config
+++ b/user_config/.config/waybar/config
@@ -73,9 +73,9 @@
 },
 
     "hyprland/language": {
-    "format": "{}",
-    "format-en": "EN(US)  ",
-    "format-ru": "RU  ",
+    "format": " {}",
+    "format-en": "EN",
+    "format-ru": "RU",
     "keyboard-name": "at-translated-set-2-keyboard"
 },
 
