--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -185,6 +185,7 @@ windowrule=size 500 500, title:(sway-launcher-desktop)$
 windowrulev2=idleinhibit fullscreen, fullscreen:1
 windowrule=size 1200 810, ^(io.github.amit9838.mousam)$ #flatpak Mousam app
 windowrulev2=float,class:(io.github.amit9838.mousam)$ #flatpak Mousam app
+windowrulev2=float,class:(ymuse)$ #flatpak Ymuse app
 
 #move focused windows inside a workspace
 bind = $extraMod, H, movewindow, l
