Add windowrules for ProtonPlus app

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -186,6 +186,7 @@ windowrulev2=idleinhibit fullscreen, fullscreen:1
 windowrule=size 1200 810, ^(io.github.amit9838.mousam)$ #flatpak Mousam app
 windowrulev2=float,class:(io.github.amit9838.mousam)$ #flatpak Mousam app
 windowrulev2=float,class:(ymuse)$ #flatpak Ymuse app
+windowrulev2=float,class:(com.vysp3r.ProtonPlus)$ #flatpak ProtonPlus app
 
 #move focused windows inside a workspace
 bind = $extraMod, H, movewindow, l
