update hypr config

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -21,6 +21,18 @@ env = _JAVA_AWT_WM_NONREPARENTING,1
 env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,qt6ct
 
+#applications
+$term = kitty
+$filemanager = $term -e $HOME/.local/bin/nwrap
+$menu = $term -e sway-launcher-desktop
+$clock = $term -e tty-clock -C3 -c -s -n -f "%A %d %B %Y (%Z)"
+$editor = $term -e nvim
+$sysmonitor = $term -e htop
+$browser = qutebrowser
+$lock = swaylock -f -i $HOME/.local/share/lock.png
+$screenshot = grim
+$telegram=flatpak run org.telegram.desktop
+
 #autostart
 exec-once = waybar &
 exec-once = sway-launcher-desktop autostart 
@@ -29,17 +41,9 @@ exec-once = mako &
 exec-once = transmission-daemon
 exec-once = swww init || swww img $HOME/.local/share/backgrounds/7.png
 exec-once = $HOME/.local/bin/sleep.sh
-
-#applications
-$term = kitty
-$fileManager = $term -e $HOME/.local/bin/nwrap
-$menu = $term -e sway-launcher-desktop
-$clock = $term -e tty-clock -C3 -c -s -n -f "%A %d %B %Y (%Z)"
-$editor = $term -e nvim
-$sysmonitor = $term -e htop
-$browser = qutebrowser
-$lock = swaylock -f -i $HOME/.local/share/lock.png
-$screenshot = grim
+exec-once=[workspace 1 silent] $browser 
+exec-once=[workspace 1 silent]sleep 3; $clock & $filemanager & $telegram
+exec-once=[workspace special:magic silent] $term
 
 #keys
 $mainMod = SUPER
@@ -50,7 +54,7 @@ bind = $mainMod, Return, exec, $term
 bind = $mainMod, F, fullscreen, 1
 bind = $mainMod, Q, killactive,
 bind = $extraMod, Q, exec, $HOME/.local/bin/killhypr
-bind = $mainMod, N, exec, $fileManager
+bind = $mainMod, N, exec, $filemanager
 bind = $mainMod, SPACE, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
