remove unneeded swww string

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -39,7 +39,7 @@ exec-once = sway-launcher-desktop autostart
 exec-once = udiskie &
 exec-once = mako &
 exec-once = transmission-daemon
-exec-once = swww init || swww img $HOME/.local/share/backgrounds/7.png
+exec-once = swww init 
 exec-once = $HOME/.local/bin/sleep.sh
 exec-once=[workspace 1 silent] $browser 
 exec-once=[workspace 1 silent]sleep 3; $clock & $filemanager & $telegram
