update autostart rules

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -42,7 +42,8 @@ exec-once = transmission-daemon
 exec-once = swww init 
 exec-once = $HOME/.local/bin/sleep.sh
 exec-once=[workspace 1 silent] $browser 
-exec-once=[workspace 1 silent]sleep 3; $clock & $filemanager & $telegram
+exec-once=[workspace 1 silent]sleep 3; $clock
+exec-once=[workspace 1 silent]sleep 5; $filemanager & $telegram
 exec-once=[workspace special:magic silent] $term
 
 #keys
