--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -24,7 +24,7 @@ env = QT_QPA_PLATFORMTHEME,qt6ct
 #applications
 $term = kitty
 $filemanager = $term -e $HOME/.local/bin/nwrap
-$menu = $term -e sway-launcher-desktop
+$menu = fuzzel
 $clock = $term -e tty-clock -C3 -c -s -n -f "%A %d %B %Y (%Z)"
 $editor = $term -e nvim
 $sysmonitor = $term -e htop
@@ -35,7 +35,12 @@ $telegram=flatpak run org.telegram.desktop
 
 #autostart
 exec-once = waybar &
-exec-once = sway-launcher-desktop autostart 
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = /usr/lib/geoclue-2.0/demos/agent
+exec-once = /usr/lib/at-spi-bus-launcher --launch-immediately
+exec-once = .local/bin/desktop-portal-launch
+exec-once = easyeffects --gapplication-service
 exec-once = udiskie &
 exec-once = mako &
 exec-once = transmission-daemon
@@ -185,8 +190,6 @@ device {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrule=float, title:(sway-launcher-desktop)$
-windowrule=size 500 500, title:(sway-launcher-desktop)$
 windowrulev2=idleinhibit fullscreen, fullscreen:1
 windowrule=size 1200 810, ^(io.github.amit9838.mousam)$ #flatpak Mousam app
 windowrulev2=float,class:(io.github.amit9838.mousam)$ #flatpak Mousam app
