--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -39,7 +39,7 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/geoclue-2.0/demos/agent
 exec-once = /usr/lib/at-spi-bus-launcher --launch-immediately
-exec-once = .local/bin/desktop-portal-launch
+exec-once = $HOME/.local/bin/desktop-portal-launch
 exec-once = easyeffects --gapplication-service
 exec-once = udiskie &
 exec-once = mako &
