update swww start command

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -34,17 +34,13 @@ $screenshot = grim
 $telegram=flatpak run org.telegram.desktop
 
 #autostart
-exec-once = waybar &
+exec-once = waybar & swww-daemon & udiskie & mako & transmission-daemon &
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/geoclue-2.0/demos/agent
 exec-once = /usr/lib/at-spi-bus-launcher --launch-immediately
 exec-once = $HOME/.local/bin/desktop-portal-launch
 exec-once = easyeffects --gapplication-service
-exec-once = udiskie &
-exec-once = mako &
-exec-once = transmission-daemon
-exec-once = swww init 
 exec-once = $HOME/.local/bin/sleep.sh
 exec-once=[workspace 1 silent] $browser 
 exec-once=[workspace 1 silent]sleep 3; $clock
