--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -31,7 +31,7 @@ $sysmonitor = $term -e htop
 $browser = qutebrowser
 $lock = swaylock -f -i $HOME/.local/share/lock.png
 $screenshot = grim
-$telegram=flatpak run org.telegram.desktop
+$telegram = flatpak run org.telegram.desktop
 
 #autostart
 exec-once = waybar & swww-daemon & udiskie & mako & transmission-daemon &
@@ -42,9 +42,7 @@ exec-once = /usr/lib/at-spi-bus-launcher --launch-immediately
 exec-once = $HOME/.local/bin/desktop-portal-launch
 exec-once = easyeffects --gapplication-service
 exec-once = $HOME/.local/bin/sleep.sh
-exec-once=[workspace 1 silent] $browser 
-exec-once=[workspace 1 silent]sleep 3; $clock
-exec-once=[workspace 1 silent]sleep 5; $filemanager & $telegram
+exec-once=[workspace 1 silent] $browser & sleep 3; $clock & sleep 4; $filemanager & $telegram
 exec-once=[workspace special:magic silent] $term
 
 #keys
@@ -187,7 +185,7 @@ device {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2=idleinhibit fullscreen, fullscreen:1
-windowrule=size 1200 810, ^(io.github.amit9838.mousam)$ #flatpak Mousam app
+windowrule=size 1200 820, ^(io.github.amit9838.mousam)$ #flatpak Mousam app
 windowrulev2=float,class:(io.github.amit9838.mousam)$ #flatpak Mousam app
 windowrulev2=float,class:(ymuse)$ #flatpak Ymuse app
 windowrulev2=float,class:(com.vysp3r.ProtonPlus)$ #flatpak ProtonPlus app
