--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -34,7 +34,7 @@ $screenshot = grim
 $telegram = flatpak run org.telegram.desktop
 
 #autostart
-exec-once = waybar & swww-daemon & udiskie & mako & transmission-daemon &
+exec-once = waybar & swww-daemon & udiskie & mako & $HOME/.local/bin/start-transmission &
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/geoclue-2.0/demos/agent
