Turn some script entries to variables

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -32,16 +32,20 @@ $browser = qutebrowser
 $lock = swaylock -f -i $HOME/.local/share/lock.png
 $screenshot = grim
 $telegram = flatpak run org.telegram.desktop
+$transmission = $HOME/.local/bin/start-transmission
+$easyeffects = easyeffects --gapplication-service
+$idlesession = $HOME/.local/bin/sleep.sh
+$polkit = /usr/lib/polkit-kde-authentication-agent-1
+
+
+
 
 #autostart
-exec-once = waybar & swww-daemon & udiskie & mako & $HOME/.local/bin/start-transmission &
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = $polkit & $idlesession & waybar & swww-daemon & udiskie & $easyeffects & mako & $transmission &
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/geoclue-2.0/demos/agent
 exec-once = /usr/lib/at-spi-bus-launcher --launch-immediately
 exec-once = $HOME/.local/bin/desktop-portal-launch
-exec-once = easyeffects --gapplication-service
-exec-once = $HOME/.local/bin/sleep.sh
 exec-once=[workspace 1 silent] $browser & sleep 3; $clock & sleep 1; $filemanager & $telegram
 exec-once=[workspace special:magic silent] $term
 
