--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -21,7 +21,7 @@ env = _JAVA_AWT_WM_NONREPARENTING,1
 env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,qt6ct
 
-#applications
+#applications and scripts
 $term = kitty
 $filemanager = $term -e $HOME/.local/bin/nwrap
 $menu = fuzzel
@@ -36,12 +36,11 @@ $transmission = $HOME/.local/bin/start-transmission
 $easyeffects = easyeffects --gapplication-service
 $idlesession = $HOME/.local/bin/sleep.sh
 $polkit = /usr/lib/polkit-kde-authentication-agent-1
+$portals = $HOME/.local/bin/desktop-portal-launch
 
 #autostart
-exec-once = $polkit & $idlesession & waybar & swww-daemon & udiskie & $easyeffects & mako & $transmission &
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = /usr/lib/at-spi-bus-launcher --launch-immediately
-exec-once = $HOME/.local/bin/desktop-portal-launch
+exec-once = $portals & $polkit & $idlesession & waybar & swww-daemon & udiskie & $easyeffects & mako & $transmission &
 exec-once=[workspace 1 silent] $browser & sleep 3; $clock & sleep 1; $filemanager & $telegram
 exec-once=[workspace special:magic silent] $term
 
