--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -32,7 +32,6 @@ $browser = qutebrowser
 $lock = swaylock -f -i $HOME/.local/share/lock.png
 $screenshot = grim
 $telegram = flatpak run org.telegram.desktop
-$transmission = $HOME/.local/bin/start-transmission
 $easyeffects = easyeffects --gapplication-service
 $idlesession = $HOME/.local/bin/sleep.sh
 $polkit = /usr/lib/polkit-kde-authentication-agent-1
@@ -40,7 +39,7 @@ $portals = $HOME/.local/bin/desktop-portal-launch
 
 #autostart
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = $portals & $polkit & $idlesession & waybar & swww-daemon & udiskie & $easyeffects & mako & $transmission &
+exec-once = $portals & $polkit & $idlesession & waybar & swww-daemon & udiskie & $easyeffects & mako &
 exec-once=[workspace 1 silent] $browser & sleep 4; $clock & sleep 1; $filemanager & $telegram
 exec-once=[workspace special:magic silent] $term
 
