backlight remove tooltip

--- a/user_config/.config/waybar/config
+++ b/user_config/.config/waybar/config
@@ -99,7 +99,8 @@
     "backlight": {
     "device": "intel_backlight",
     "format": "{icon} {percent}%",
-    "format-icons": ["🌕", "🌔", "🌓", "🌒", "🌑"]
+    "format-icons": ["🌕", "🌔", "🌓", "🌒", "🌑"],
+    "tooltip": false
 },
 
 
