add windowrule for qalculate-gtk

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -187,6 +187,8 @@ windowrule=size 1200 820, ^(io.github.amit9838.mousam)$ #flatpak Mousam app
 windowrulev2=float,class:(io.github.amit9838.mousam)$ #flatpak Mousam app
 windowrulev2=float,class:(ymuse)$ #flatpak Ymuse app
 windowrulev2=float,class:(com.vysp3r.ProtonPlus)$ #flatpak ProtonPlus app
+windowrulev2=float,class:(qalculate-gtk)$ #flatpak Qalculate-gtk app
+
 
 #move focused windows inside a workspace
 bind = $extraMod, H, movewindow, l
