Replace easyeffects with its flatpak version

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -32,7 +32,7 @@ $browser = qutebrowser
 $lock = swaylock -f -i $HOME/.local/share/lock.png
 $screenshot = grim
 $telegram = flatpak run org.telegram.desktop
-$easyeffects = easyeffects --gapplication-service
+$easyeffects = flatpak run com.github.wwmm.easyeffects --gapplication-service
 $idlesession = $HOME/.local/bin/sleep.sh
 $polkit = /usr/lib/polkit-kde-authentication-agent-1
 $portals = $HOME/.local/bin/desktop-portal-launch
