--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -20,6 +20,7 @@ env = XCURSOR_SIZE,24
 env = _JAVA_AWT_WM_NONREPARENTING,1
 env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,qt6ct
+env = MOZ_ENABLE_WAYLAND,1
 
 #applications and scripts
 $term = kitty
@@ -28,7 +29,7 @@ $menu = fuzzel
 $clock = $term -e tty-clock -C3 -c -s -n -f "%A %d %B %Y (%Z)"
 $editor = $term -e nvim
 $sysmonitor = $term -e htop
-$browser = qutebrowser
+$browser = flatpak run org.mozilla.firefox
 $lock = swaylock -f -i $HOME/.local/share/lock.png
 $screenshot = grim
 $telegram = flatpak run org.telegram.desktop
