fuzzel - kitty > foot

--- a/user_config/.config/fuzzel/fuzzel.ini
+++ b/user_config/.config/fuzzel/fuzzel.ini
@@ -9,7 +9,7 @@
 # filter-desktop=no
 # fuzzy=yes
 # show-actions=no
- terminal=kitty -e  # Note: you cannot actually use environment variables here
+ terminal=foot -e  # Note: you cannot actually use environment variables here
 # launch-prefix=<not set>
 
 # lines=15
