hypr - kitty > foot

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -23,7 +23,7 @@ env = QT_QPA_PLATFORMTHEME,qt6ct
 env = MOZ_ENABLE_WAYLAND,1
 
 #applications and scripts
-$term = kitty
+$term = foot
 $filemanager = $term -e $HOME/.local/bin/nwrap
 $menu = fuzzel
 $clock = $term -e tty-clock -C3 -c -s -n -f "%A %d %B %Y (%Z)"
