--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -23,7 +23,7 @@ env = QT_QPA_PLATFORMTHEME,qt6ct
 env = MOZ_ENABLE_WAYLAND,1
 
 #applications and scripts
-$term = foot
+$term = footclient
 $filemanager = $term -e $HOME/.local/bin/nwrap
 $menu = fuzzel
 $clock = $term -e tty-clock -C3 -c -s -n -f "%A %d %B %Y (%Z)"
@@ -40,9 +40,8 @@ $portals = $HOME/.local/bin/desktop-portal-launch
 
 #autostart
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = $portals & $polkit & $idlesession & waybar & swww-daemon & udiskie & $easyeffects & mako &
+exec-once = foot --server & $portals & $polkit & $idlesession & waybar & swww-daemon & udiskie & $easyeffects & mako &
 exec-once=[workspace 1 silent] $browser & sleep 4; $clock & sleep 1; $filemanager & $telegram
-exec-once=[workspace special:magic silent] $term
 
 #keys
 $mainMod = SUPER
