don't focus preview window in nnn

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -183,6 +183,7 @@ device {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2=idleinhibit fullscreen, fullscreen:1
+windowrulev2=nofocus, title:(preview-tui)$ #for nnn preview-tui plugin
 windowrule=size 1200 820, ^(io.github.amit9838.mousam)$ #flatpak Mousam app
 windowrulev2=float,class:(io.github.amit9838.mousam)$ #flatpak Mousam app
 windowrulev2=float,class:(ymuse)$ #flatpak Ymuse app
