--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -184,6 +184,7 @@ device {
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2=idleinhibit fullscreen, fullscreen:1
 windowrulev2=nofocus, title:(preview-tui)$ #for nnn preview-tui plugin
+windowrulev2=size 800 600,  class:(xdg-desktop-portal-gtk)$
 windowrule=size 1200 820, ^(io.github.amit9838.mousam)$ #flatpak Mousam app
 windowrulev2=float,class:(io.github.amit9838.mousam)$ #flatpak Mousam app
 windowrulev2=float,class:(ymuse)$ #flatpak Ymuse app
