add touchpad configuration

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -94,6 +94,7 @@ input {
 
     touchpad {
         natural_scroll = false
+	clickfinger_behavior = 1
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
