replace swaylock with hyprlock

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -30,7 +30,7 @@ $clock = $term -e tty-clock -C3 -c -s -n -f "%A %d %B %Y (%Z)"
 $editor = $term -e nvim
 $sysmonitor = $term -e htop
 $browser = flatpak run org.mozilla.firefox
-$lock = swaylock -f -i $HOME/.local/share/lock.png
+$lock = hyprlock
 $screenshot = grim
 $telegram = flatpak run org.telegram.desktop
 $easyeffects = flatpak run com.github.wwmm.easyeffects --gapplication-service
