replace swayidle with hypridle

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -30,17 +30,16 @@ $clock = $term -e tty-clock -C3 -c -s -n -f "%A %d %B %Y (%Z)"
 $editor = $term -e nvim
 $sysmonitor = $term -e htop
 $browser = flatpak run org.mozilla.firefox
-$lock = hyprlock
+$lock = loginctl lock-session
 $screenshot = grim
 $telegram = flatpak run org.telegram.desktop
 $easyeffects = flatpak run com.github.wwmm.easyeffects --gapplication-service
-$idlesession = $HOME/.local/bin/sleep.sh
 $polkit = /usr/lib/polkit-kde-authentication-agent-1
 $portals = $HOME/.local/bin/desktop-portal-launch
 
 #autostart
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = foot --server & $portals & $polkit & $idlesession & waybar & swww-daemon & udiskie & $easyeffects & mako &
+exec-once = foot --server & $portals & $polkit & hypridle & waybar & swww-daemon & udiskie & $easyeffects & mako &
 exec-once=[workspace 1 silent] $browser & sleep 4; $clock & sleep 1; $filemanager & $telegram
 
 #keys
