start mpd-notification from hyprland config

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -36,10 +36,11 @@ $telegram = flatpak run org.telegram.desktop
 $easyeffects = flatpak run com.github.wwmm.easyeffects --gapplication-service
 $polkit = /usr/lib/polkit-kde-authentication-agent-1
 $portals = $HOME/.local/bin/desktop-portal-launch
+$mpd_notify = mpd-notification -H localhost -p 6600 -m $HOME/Music -s 150 -t 10
 
 #autostart
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = foot --server & $portals & $polkit & hypridle & waybar & swww-daemon & udiskie & $easyeffects & mako &
+exec-once = foot --server & $portals & $polkit & hypridle & waybar & swww-daemon & udiskie & $easyeffects & mako & $mpd_notify
 exec-once=[workspace 1 silent] $browser & sleep 4; $clock & sleep 1; $filemanager & $telegram
 
 #keys
