--- a/user_config/.config/hypr/hypridle.conf
+++ b/user_config/.config/hypr/hypridle.conf
@@ -7,16 +7,15 @@ general {
 
 
 listener {
-    timeout = 150                                # 2.5min.
-    on-timeout = brightnessctl -s set 50%        # set monitor backlight to 50%
+    timeout = 120                                # 2 min.
+    on-timeout = brightnessctl -s set 10%        # set monitor backlight to 10%
     on-resume = brightnessctl -r                 # monitor backlight restore.
 }
 
 
 listener {
-    timeout = 300
+    timeout = 300                              #5 min
     on-timeout = loginctl lock-session 
-    # on-resume = notify-send "Welcome back to your desktop!"
 }
 
 listener {
