--- a/user_config/.config/hypr/hyprlock.conf
+++ b/user_config/.config/hypr/hyprlock.conf
@@ -1,3 +1,9 @@
+general {
+     hide_cursor = true
+     ignore_empty_input = true
+}
+
+
 background {
     monitor =
     path = $HOME/.local/share/lock.png   # only png supported for now
@@ -12,6 +18,7 @@ background {
     vibrancy = 0.1696
     vibrancy_darkness = 0.0
 }
+
 input-field {
     monitor =
     size = 200, 50
@@ -33,15 +40,40 @@ input-field {
     halign = center
     valign = center
 }
+
+
 label {
     monitor =
-    text = $TIME   $LAYOUT
+    text = $USER
     color = rgba(200, 200, 200, 1.0)
     font_size = 18
     font_family = Noto Sans
 
-    position = 0, 80
+    position = 0, 120
     halign = center
     valign = center
 }
 
+label {
+    monitor =
+    text = $TIME
+    color = rgba(200, 200, 200, 1.0)
+    font_size = 18
+    font_family = Noto Sans
+
+    position = 0, 90
+    halign = center
+    valign = center
+} 
+
+label {
+    monitor =
+    text = $LAYOUT
+    color = rgba(200, 200, 200, 1.0)
+    font_size = 18
+    font_family = Noto Sans
+
+    position = 0, 60
+    halign = center
+    valign = center
+} 
