--- a/user_config/.config/hypr/hyprlock.conf
+++ b/user_config/.config/hypr/hyprlock.conf
@@ -6,15 +6,15 @@ general {
 
 background {
     monitor =
-    path = $HOME/.local/share/lock.png   # only png supported for now
+    path = screenshot
     color = rgba(25, 20, 20, 1.0)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
-    blur_passes = 0 # 0 disables blurring
-    blur_size = 7
+    blur_passes = 1 # 0 disables blurring
+    blur_size = 15
     noise = 0.0117
     contrast = 0.8916
-    brightness = 0.8172
+    brightness = 0.2
     vibrancy = 0.1696
     vibrancy_darkness = 0.0
 }
