--- a/user_config/.config/foot/foot.ini
+++ b/user_config/.config/foot/foot.ini
@@ -5,10 +5,10 @@
 # login-shell=no
 
 # app-id=foot # globally set wayland app-id. Default values are "foot" and "footclient" for desktop and server mode
-#title=$@
+# title=foot
 # locked-title=no
 
- font=monospace:size=11
+ font=monospace:size=12
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -193,6 +193,7 @@ search-start=Control+Shift+slash
 # clipboard-paste=Control+v Control+Shift+v Control+y XF86Paste
 # primary-paste=Shift+Insert
 # unicode-input=none
+# quit=none
 # scrollback-up-page=Shift+Page_Up
 # scrollback-up-half-page=none
 # scrollback-up-line=none
@@ -224,4 +225,3 @@ search-start=Control+Shift+slash
 # select-row=BTN_LEFT-4
 
 # vim: ft=dosini
-
