--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -24,11 +24,11 @@ env = MOZ_ENABLE_WAYLAND,1
 
 #applications and scripts
 $term = footclient
-$filemanager = $term -e $HOME/.local/bin/nwrap
+$filemanager = $term -T nnn -e $HOME/.local/bin/nwrap
 $menu = fuzzel
-$clock = $term -e tty-clock -C3 -c -s -n -f "%A %d %B %Y (%Z)"
-$editor = $term -e nvim
-$sysmonitor = $term -e htop
+$clock = $term -T tty-clock -e tty-clock -C3 -c -s -n -f "%A %d %B %Y (%Z)"
+$editor = $term -T neovim -e nvim
+$sysmonitor = $term -T htop -e htop
 $browser = flatpak run org.mozilla.firefox
 $lock = loginctl lock-session
 $screenshot = grim
@@ -43,7 +43,7 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = foot --server & $portals & $polkit & hypridle & waybar & swww-daemon & udiskie & $easyeffects & mako & $mpd_notify
 exec-once=[workspace 1 silent] $browser & sleep 4; $clock & sleep 1; $filemanager & $telegram
 
-#keys
+#mod keys
 $mainMod = SUPER
 $extraMod = SUPER_SHIFT
 
@@ -82,7 +82,7 @@ bind = ,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 bind = ,XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle 
 
 
-#etc
+#input
 input {
     kb_layout = us,ru
     kb_variant =
@@ -100,6 +100,13 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
+
+device {
+    name = epic-mouse-v1
+    sensitivity = -0.5
+}
+
+#compositioning
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
@@ -132,6 +139,9 @@ decoration {
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
+    dim_inactive = true
+    dim_strength = 0.4
+    dim_special = 0.3
 }
 
 animations {
@@ -170,12 +180,7 @@ misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
+
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
@@ -184,7 +189,9 @@ device {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2=idleinhibit fullscreen, fullscreen:1
-windowrulev2=nofocus, title:(preview-tui)$ #for nnn preview-tui plugin
+windowrulev2=nofocus, title:(preview-tui)$ #never focus nnn preview-tui plugin
+windowrulev2=nodim, title:(preview-tui)$ #never dim nnn preview-tui plugin
+windowrulev2=nodim, title:(tty-clock)$ #never dim tty-clock terminal window
 windowrulev2=size 800 600,  class:(xdg-desktop-portal-gtk)$
 windowrule=size 1200 820, ^(io.github.amit9838.mousam)$ #flatpak Mousam app
 windowrulev2=float,class:(io.github.amit9838.mousam)$ #flatpak Mousam app
