split hyprland config into different configs

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -2,86 +2,6 @@
 #use 'hyprctl monitors' 
 monitor=,preferred,auto,1
 
-#using intel gpu for rendering
-#run lspci | grep -E 'VGA|3D' , then
-#ls -l /dev/dri/by-path to list GPUs and their bus IDs.
-env = WLR_DRM_DEVICES,/dev/dri/card2:/dev/dri/card1
-
-#nvidia
-#env = LIBVA_DRIVER_NAME,nvidia
-#env = GBM_BACKEND,nvidia-drm
-#env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-#env = WLR_NO_HARDWARE_CURSORS,1
-
-#variables
-env = XDG_SESSION_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,wayland
-env = XCURSOR_SIZE,24
-env = _JAVA_AWT_WM_NONREPARENTING,1
-env = QT_QPA_PLATFORM,wayland
-env = QT_QPA_PLATFORMTHEME,qt6ct
-env = MOZ_ENABLE_WAYLAND,1
-
-#applications and scripts
-$term = footclient
-$filemanager = $term -T nnn -e $HOME/.local/bin/nwrap
-$menu = fuzzel
-$clock = $term -T tty-clock -e tty-clock -C3 -c -s -n -f "%A %d %B %Y (%Z)"
-$editor = $term -T neovim -e nvim
-$sysmonitor = $term -T htop -e htop
-$browser = flatpak run org.mozilla.firefox
-$lock = loginctl lock-session
-$screenshot = grim
-$telegram = flatpak run org.telegram.desktop
-$easyeffects = flatpak run com.github.wwmm.easyeffects --gapplication-service
-$polkit = /usr/lib/polkit-kde-authentication-agent-1
-$portals = $HOME/.local/bin/desktop-portal-launch
-$mpd_notify = mpd-notification -H localhost -p 6600 -m $HOME/Music -s 150 -t 10
-
-#autostart
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = foot --server & $portals & $polkit & hypridle & waybar & swww-daemon & udiskie & $easyeffects & mako & $mpd_notify
-exec-once=[workspace 1 silent] $browser & sleep 4; $clock & sleep 1; $filemanager & $telegram
-
-#mod keys
-$mainMod = SUPER
-$extraMod = SUPER_SHIFT
-
-# keyboard shortcuts
-bind = $mainMod, Return, exec, $term
-bind = $mainMod, F, fullscreen, 1
-bind = $mainMod, Q, killactive,
-bind = $extraMod, Q, exec, $HOME/.local/bin/killhypr
-bind = $mainMod, N, exec, $filemanager
-bind = $mainMod, SPACE, togglefloating,
-bind = $mainMod, D, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, X, togglesplit, # dwindle
-bind = $mainMod, W, exec, $browser
-bind = $mainMod, T, exec, $clock
-bind = $mainMod, E, exec, $editor
-bind = $mainMod, I, exec, $sysmonitor
-bind = $mainMod, Escape, exec, systemctl suspend
-bind = $extraMod, Z, exec, $lock 
-bind = ,code:248, exec, $lock
-bind = $mainMod, PRINT, exec, $screenshot
-
-#mpd-mpc remote control
-bind = ,XF86AudioNext, exec, mpc next
-bind = ,XF86AudioPrev, exec, mpc prev
-bind = ,XF86AudioPlay, exec, mpc toggle
-
-#brightnessctl
-bind = $mainMod, code:69, exec, brightnessctl set +10%
-bind = $mainMod, code:68, exec, brightnessctl set 10%-
-
-#pactl
-bind = ,XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5% 
-bind = ,XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5% 
-bind = ,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle 
-bind = ,XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle 
-
-
 #input
 input {
     kb_layout = us,ru
@@ -181,81 +101,10 @@ misc {
 }
 
 
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrulev2=idleinhibit fullscreen, fullscreen:1
-windowrulev2=nofocus, title:(preview-tui)$ #never focus nnn preview-tui plugin
-windowrulev2=nodim, title:(preview-tui)$ #never dim nnn preview-tui plugin
-windowrulev2=nodim, title:(tty-clock)$ #never dim tty-clock terminal window
-windowrulev2=size 800 600,  class:(xdg-desktop-portal-gtk)$
-windowrule=size 1200 820, ^(io.github.amit9838.mousam)$ #flatpak Mousam app
-windowrulev2=float,class:(io.github.amit9838.mousam)$ #flatpak Mousam app
-windowrulev2=float,class:(ymuse)$ #flatpak Ymuse app
-windowrulev2=float,class:(com.vysp3r.ProtonPlus)$ #flatpak ProtonPlus app
-windowrulev2=float,class:(qalculate-gtk)$ #flatpak Qalculate-gtk app
-
-
-#move focused windows inside a workspace
-bind = $extraMod, H, movewindow, l
-bind = $extraMod, L, movewindow, r
-bind = $extraMod, K, movewindow, u
-bind = $extraMod, J, movewindow, d
-
-#resize windows with keyboard
-bind = L_ALT, h, resizeactive, -40 0
-bind = L_ALT, l, resizeactive, 40 0
-bind = L_ALT, k, resizeactive, 0 -40
-bind = L_ALT, j, resizeactive, 0 40
-
-# Scroll through existing workspaces with keyboard
-bind = $mainMod, TAB, workspace, e+1
-bind = L_ALT, TAB, workspace, e-1
-
-# Move focus with mainMod
-bind = $mainMod, H, movefocus, l
-bind = $mainMod, L, movefocus, r
-bind = $mainMod, K, movefocus, u
-bind = $mainMod, J, movefocus, d
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
+#source
+source = $HOME/.config/hypr/env.conf
+source = $HOME/.config/hypr/apps.conf
+source = $HOME/.config/hypr/autostart.conf
+source = $HOME/.config/hypr/windowrules.conf
+source = $HOME/.config/hypr/keybinds.conf
 
