update hypr keybinds

--- a/user_config/.config/hypr/keybinds.conf
+++ b/user_config/.config/hypr/keybinds.conf
@@ -18,7 +18,6 @@ bind = $mainMod, E, exec, $editor
 bind = $mainMod, I, exec, $sysmonitor
 bind = $mainMod, Escape, exec, systemctl suspend
 bind = $extraMod, Z, exec, $lock 
-bind = ,code:248, exec, $lock
 bind = $mainMod, PRINT, exec, $screenshot
 
 #mpd-mpc remote control
@@ -36,6 +35,8 @@ bind = ,XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = ,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle 
 bind = ,XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle 
 
+#lid switch
+#bindl=,switch:[Lid Switch],exec,$lock
 
 #move focused windows inside a workspace
 bind = $extraMod, H, movewindow, l
