update hypr keybinds 2

--- a/user_config/.config/hypr/keybinds.conf
+++ b/user_config/.config/hypr/keybinds.conf
@@ -2,7 +2,7 @@
 $mainMod = SUPER
 $extraMod = SUPER_SHIFT
 
-# keyboard shortcuts
+#keyboard shortcuts
 bind = $mainMod, Return, exec, $term
 bind = $mainMod, F, fullscreen, 1
 bind = $mainMod, Q, killactive,
@@ -38,22 +38,6 @@ bind = ,XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
 #lid switch
 #bindl=,switch:[Lid Switch],exec,$lock
 
-#move focused windows inside a workspace
-bind = $extraMod, H, movewindow, l
-bind = $extraMod, L, movewindow, r
-bind = $extraMod, K, movewindow, u
-bind = $extraMod, J, movewindow, d
-
-#resize windows with keyboard
-bind = L_ALT, h, resizeactive, -40 0
-bind = L_ALT, l, resizeactive, 40 0
-bind = L_ALT, k, resizeactive, 0 -40
-bind = L_ALT, j, resizeactive, 0 40
-
-# Scroll through existing workspaces with keyboard
-bind = $mainMod, TAB, workspace, e+1
-bind = L_ALT, TAB, workspace, e-1
-
 # Move focus with mainMod
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
@@ -88,12 +72,28 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
-# Scroll through existing workspaces with mainMod + scroll
+# Scroll through existing workspaces with mouse scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
+
+# Scroll through existing workspaces with keyboard
+bind = $mainMod, TAB, workspace, e+1
+bind = $extraMod, TAB, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+#move focused windows with keyboard
+bind = $extraMod, H, movewindow, l
+bind = $extraMod, L, movewindow, r
+bind = $extraMod, K, movewindow, u
+bind = $extraMod, J, movewindow, d
+
+#resize windows with keyboard
+bind = L_ALT, h, resizeactive, -40 0
+bind = L_ALT, l, resizeactive, 40 0
+bind = L_ALT, k, resizeactive, 0 -40
+bind = L_ALT, j, resizeactive, 0 40
 
 
