put input section into a separate config

--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -2,31 +2,8 @@
 #use 'hyprctl monitors' 
 monitor=,preferred,auto,1
 
-#input
-input {
-    kb_layout = us,ru
-    kb_variant =
-    kb_model =
-    kb_options = grp:alt_shift_toggle
-    kb_rules =
-
-    follow_mouse = 1
-
-    touchpad {
-        natural_scroll = false
-	clickfinger_behavior = 1
-    }
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-}
 
 
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
-
-#compositioning
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
@@ -107,4 +84,5 @@ source = $HOME/.config/hypr/apps.conf
 source = $HOME/.config/hypr/autostart.conf
 source = $HOME/.config/hypr/windowrules.conf
 source = $HOME/.config/hypr/keybinds.conf
+source = $HOME/.config/hypr/input.conf
 
