--- a/user_config/.config/hypr/env.conf
+++ b/user_config/.config/hypr/env.conf
@@ -17,3 +17,5 @@ env = _JAVA_AWT_WM_NONREPARENTING,1
 env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = MOZ_ENABLE_WAYLAND,1
+env = HYPRCURSOR_THEME,rose-pine-hyprcursor
+env = HYPRCURSOR_SIZE,24
