--- a/user_config/.config/hypr/hyprland.conf
+++ b/user_config/.config/hypr/hyprland.conf
@@ -69,7 +69,8 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = false
+    workspace_swipe = true
+    workspace_swipe_fingers = 3
 }
 
 misc {
