use rose-pine theme for foot and waybar

--- a/user_config/.config/foot/foot.ini
+++ b/user_config/.config/foot/foot.ini
@@ -28,7 +28,8 @@
 # pad=0x0                             # optionally append 'center'
 # resize-delay-ms=100
 
-# notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
+ notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
+ notify-focus-inhibit=no
 
 # bold-text-in-bright=no
 # word-delimiters=,│`|:"'()[]{}<>
@@ -41,8 +42,9 @@
 # name=value
 
 [bell]
-# urgent=no
-# notify=no
+ urgent=yes
+ notify=yes
+
 # visual=no
 # command=
 # command-focused=no
@@ -225,3 +227,6 @@ search-start=Control+Shift+slash
 # select-row=BTN_LEFT-4
 
 # vim: ft=dosini
+
+[main]
+include=/usr/share/foot/themes/rose-pine
