fuzzel - use catppuccin mocha theme

--- a/user_config/.config/fuzzel/fuzzel.ini
+++ b/user_config/.config/fuzzel/fuzzel.ini
@@ -27,12 +27,23 @@
 # layer = top
 # exit-on-keyboard-focus-loss = yes
 
+#catpuccin-mocha
 [colors]
-background=000000b3
-text=ffffffff
+background=1e1e2eb3
+text=cdd6f4ff
+match=f38ba8ff
+selection=585b70ff
+selection-match=f38ba8ff
+selection-text=cdd6f4ff
+border=b4befeff
+
+#default
+#[colors]
+#background=000000b3
+#text=ffffffff
 # match=cb4b16ff
-selection=ffffffff
-selection-text=000000ff
+#selection=ffffffff
+#selection-text=000000ff
 # border=002b36ff
 
 [border]
