--- a/user_config/.config/waybar/config.jsonc
+++ b/user_config/.config/waybar/config.jsonc
@@ -162,13 +162,13 @@
 
     "hyprland/window": {
         "format": "  {}",
-        "max-length": 40
+        "max-length": 30
     },
 
     "hyprland/workspaces": {
         "all-outputs": false,
         "disable-scroll": true,
-        "format": "{name}",
+        "format": "{name}"
 
 	
     },
